# FHIR-MCP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Caddyfile  Dockerfile  docker-compose.yml
docs/: DEMO_SCRIPT.md  DEPLOY_ORACLE.md  MCP_REGISTRY_ENTRY.md  blog.md
docs/superpowers/plans/: 2026-05-17-fhir-mcp-v0.1.0.md  2026-05-18-fhir-mcp-v0.2.0.md
examples/: claude_desktop_config.json  demo_queries.md
scripts/: convert_r4_to_r4b.py  generate_synthea.sh  validate_bundle.py
src/fhir_mcp/: __main__.py  server.py
src/fhir_mcp/adherence/: compute.py  narrative.py  routing.py  structured.py
src/fhir_mcp/backend/: base.py  hapi_proxy.py  in_memory.py
src/fhir_mcp/tools/: conditions.py  encounters.py  medications.py  observations.py  patients.py
tests/: conftest.py  test_adherence_narrative.py  test_adherence_routing.py  test_adherence_structured.py  test_backend_hapi_proxy.py  test_backend_in_memory.py  test_server_stdio.py  test_smoke.py  test_tools_conditions.py  test_tools_encounters.py  test_tools_medications.py  test_tools_observations.py  test_tools_patients.py  test_validate_bundle.py
tests/fixtures/: mini_bundle.json
